--- a/src/10print/package.json
+++ b/src/10print/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "css-houdini-10print",
+  "name": "css-houdini-ten-print",
   "version": "0.0.1",
   "description": "CSS Houdini Background 10print",
   "source": "src/index.js",
